@@ -1092,9 +1092,19 @@ my @nrange_tests = (
     ["1-10,1234,5",
      "qpdf: error in numeric range 1-10,1234,5: number 1234 out of range",
      2],
-    ["1,3,5-10,z-13,13,9,z,2",
-     "numeric range 1,3,5-10,z-13,13,9,z,2" .
-     " -> 1 3 5 6 7 8 9 10 15 14 13 13 9 15 2",
+    ["1,r,3",
+     "qpdf: error in numeric range 1,r,3: number 16 out of range",
+     2],
+    ["1,r16,3",
+     "qpdf: error in numeric range 1,r16,3: number 0 out of range",
+     2],
+    ["1,3,5-10,z-13,13,9,z,2,r2-r4",
+     "numeric range 1,3,5-10,z-13,13,9,z,2,r2-r4" .
+     " -> 1 3 5 6 7 8 9 10 15 14 13 13 9 15 2 14 13 12",
+     0],
+    ["r1-r15", # r\d+ at end
+     "numeric range r1-r15" .
+     " -> 15 14 13 12 11 10 9 8 7 6 5 4 3 2 1",
      0],
     );
 $n_tests += scalar(@nrange_tests);
